--- a/style.css
+++ b/style.css
@@ -62,6 +62,7 @@ body{
     background-color: rgb(140, 12, 226);
 }
 .menubar{
+    position: sticky;
     background-color: rgb(43, 4, 80);
     height: 60px;
     width: 100%;
