--- a/get in touch style.css
+++ b/get in touch style.css
@@ -114,6 +114,7 @@ input[type="submit"]:hover{
 }
 .left ul li a:hover,.right ul li a:hover,.middle ul li a:hover{
     color: red;
+    font-size: 18px;
 }
 .bottom.p{
     color:white;
