--- a/style.css
+++ b/style.css
@@ -31,14 +31,17 @@ body{
 .b1{
     margin-right: 85px;
     margin-top: 9px;
-    width: 80px;
+    width: 110px;
     height: 42px;
     background-color:rgb(43, 4, 80);
     font-weight: bold;
     border-radius: 5%;
     font-size: 18px;
+    padding: 5px;
+    overflow: hidden;
 
 }
+
 .b2
 {
     margin-top: 9px;
@@ -62,7 +65,9 @@ body{
     background-color: rgb(140, 12, 226);
 }
 .menubar{
-    position: sticky;
+    overflow: hidden;
+    position: fixed;
+    top: 0;
     background-color: rgb(43, 4, 80);
     height: 60px;
     width: 100%;
@@ -86,6 +91,10 @@ body{
 .menubar ul li:hover{
     background: rgb(140, 12, 226);
 }
+.menubar{
+    position: -webkit-sticky; /* Safari */
+    position: sticky;
+}
 .search{
     background-color: rgb(172, 237, 233);
     width: 100%;
@@ -96,42 +105,47 @@ body{
 .search h1{
     margin-left: 28%;
     margin-right: 28%;
-    padding-top: 28px;
+    padding-top: 35px;
     font-size: 30px
 }
-input[type="text"]{
-    display: block;
-    box-sizing: border-box;
-    width: 50%;
-    height: 40px;
+.searchbar{
+    display: flex;
+    margin-top: 50px;
     margin-left: 25%;
-    margin-top: 20px;
-    margin-bottom: 10px;
-    padding: 5px;
+}
+.searchbar input,select{
+    height: 56px;
+    width: 30%;
+    font-size: 20px;
+    text-align: center;
+}
+#category{
     border: none;
-    transition: 0.2s ease;
-    font-size: 16px;
-    color: black;
+    border-right: 1px dashed;
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
+    height: 65px;
 }
-input[type="text"]:focus {
-  border-bottom: 2px solid #16a085;
-  color: #16a085;
-  transition: 0.1s ease;
-  color: black;
+#location{
+    border: none;
+    height: 65px;
+    border-left: 1px dashed;
+    border-right: 1px dashed;
 }
-input[type="submit"]{
-    width: 150px;
-    height: 45px;
-    margin-left: 40%;
-    font-size: large;
-    background-color: rgb(43, 4, 80);
-    color: white;
-    border-radius:2%;
-    margin-top: 5px;
+#icon{
+    width: 75px;
+    height: 65px;
+    background-color: white;
+    border: none;
+    border-left: 1px dashed;
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
 }
-input[type="submit"]:hover{
-    background-color:  rgb(140, 12, 226);
+#icon:hover{
+    background-color: rgb(221, 220, 220);
+    border: 1px solid;
 }
+
 .job{
     height: 250px;
     margin-top: 75px;
@@ -178,6 +192,7 @@ input[type="submit"]:hover{
 }
 .left ul li a:hover,.right ul li a:hover,.middle ul li a:hover{
     color: red;
+    font-size: 18px;
 }
 .bottom p{
     margin-top: 260px;
@@ -185,3 +200,4 @@ input[type="submit"]:hover{
     margin-left: 10%;
     color:rgb(203, 200, 195);
 }
+
