--- a/work with us.css
+++ b/work with us.css
@@ -80,6 +80,7 @@
 }
 .left ul li a:hover,.right ul li a:hover,.middle ul li a:hover{
     color: red;
+    font-size: 18px;
 }
 .bottom p{
     margin-top: 260px;
