--- a/post a job.css
+++ b/post a job.css
@@ -23,7 +23,7 @@ h1{
     font-weight: 150;
     text-align: center;
     padding: 10px;
-    margin-top: -10px;
+    margin-top: -15px;
 }
 input{
     width: 500px;
@@ -57,4 +57,18 @@ input[type="submit"]{
 }
 input[type="submit"]:hover{
     background-color:  rgb(13, 244, 82);
+}
+#btn{
+    background-color: rgb(30, 150, 66);
+    float: right;
+    margin: 10px;
+    height: 50px;
+    width: 70px;
+    color: white;
+    border: 1px solid white;
+    font-size: 18px;
+    margin-top: -75px;
+}
+#btn:hover{
+    background-color: rgb(21, 199, 74);
 }
